--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/webcamjs/1.0.26/webcam.js"></script>
+    <script src="https://unpkg.com/ml5@0.4.3/dist/ml5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
@@ -41,6 +42,7 @@
 <br>
 <h4>On the following gestures the model is trained-</h4>
 <br>
+
 <div id="emojis">
 <span>&#9757;</span>
 <span>&#9994;</span>
@@ -93,6 +95,7 @@
 </center>
 
 
-</div>    
+</div>
+<script src="main.js"></script>    
 </body>
 </html>
