--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div>
 
       <label id="prediction_1_heading">Prediction 1-</label><br>
-      <h1 id="prediction_1_gesture"></h1><br>    
+      <h1 id="prediction_1_name"></h1><br>    
       <h1 id="prediction_1_gesture" ></h1><br>
 
     </div>
@@ -73,7 +73,7 @@
     <div>
 
       <label id="prediction_2_heading">Prediction 2-</label><br>
-      <h1 id="prediction_2_gesture"></h1><br>    
+      <h1 id="prediction_2_name"></h1><br>    
       <h1 id="prediction_2_gesture"></h1><br>
 
     </div>
